--- a/index.html
+++ b/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> Do I need this line - it was added automatically in the boilerplate-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
+
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Hebrew Language</title>
 </head>
-<body>
-    <h1>The Hebrew Language</h1>
-</body>
-</html>
 
+<body>
+    <header>
+        <a href="index.html">
+            <h1>The Hebrew Language</h1>
+        </a>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Short History of the Hebrew Language</a>
+                </li>
+                <li>
+                    <a href="#">Common Hebrew Phrases</a>
+                </li>
+                <li>
+                    <a href="#">The Hebrew Alphabet</a>
+                </li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <section>
+        Introduction to Hebrew Language
+    </section>
+
+    <section>
+        Modern Hebrew
+    </section>
+
+    <section>
+        Interesting Facts
+    </section>
+
+    <footer>
+        <p>© 2021 Cristina Onea</p>
+    </footer>
+
+
+
+</body>
+
+</html>
