Style navigation links and header logo

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1>The Hebrew Language</h1>
-        </a>
-
+       <nav id="menu">
         <nav>
             <ul>
                 <li>
@@ -32,6 +29,12 @@
                 </li>
             </ul>
         </nav>
+        
+
+        <a href="index.html">
+            <h1 id="logo">The Hebrew Language</h1>
+        </a>
+
 
     </header>
 
