Add image and font styling. Add structure second page to the website

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
         <nav id="menu">
             <nav>
                 <ul>
-                    <li>
-                        <a href="index.html">Short History of the Hebrew Language</a>
-                    </li>
+
                     <li>
                         <a href="#">Common Hebrew Phrases</a>
                     </li>
                     <li>
-                        <a href="#">The Hebrew Alphabet</a>
+                        <a href="alphabet.html">The Hebrew Alphabet</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Home</a>
                     </li>
                 </ul>
             </nav>
@@ -43,6 +44,9 @@
             <div id="introduction-image">
                 <img src="assets/images/dead-sea-scrolls-facsimile-edition-02.jpg"
                     alt="An image of a dead sea manuscript in Hebrew language">
+            </div>
+
+            <div id="first-section">
                 <h2>Introduction to the Hebrew Language</h2>
                 <br>
                 <p>
@@ -80,8 +84,9 @@
                     ultra-orthodox will only use it for prayer and liturgy.
 
                 </p>
-
             </div>
+
+        </div>
 
 
 
@@ -89,7 +94,7 @@
         </div>
 
 
-        Introduction to Hebrew Language
+
     </section>
 
     <section>
