Add alphabet table and structure content in it

--- a/alphabet.html
+++ b/alphabet.html
@@ -85,9 +85,153 @@
                 distinction between uppercase and lowercase letters. Hebrew is written from right to left. Five letters
                 have different forms when used at the end of a word.
             </p>
-            <h3>Aleph א</h3>
-            <p>Aleph is the first letter of the alphabet, in Hebrew alphabet is called <i>Aleph-Bet</i> (אָלֶפְבֵּית)
+            <p>Aleph is the first letter of the alphabet, in Hebrew, the alphabet is called <i>Aleph-Bet</i>
+                (אָלֶפְבֵּית).
             </p>
+            <p>
+                In modern Hebrew, the dagesh (lit. emphasis) is an accent placed in the middle of a letter that changes
+                the pronunciation of ב‎ bet, כ‎ kaf, and פ‎ pe into [v], [ch] and [f]. We've added a column for
+                pronunciation without dagesh so it's easy to see the difference.
+            </p>
+            <p>
+                In Modern Hebrew, five letters have final forms or <i>sofit</i> (Hebrew: סופית‎). These are only used at
+                the end of a word. This final form does not affect the way these letters are pronounced.
+            </p>
+
+            <div id="hebrew-alphabet-table">
+                <table>
+                    <tr>
+                        <th>Letter Name</th>
+                        <th>Form</th>
+                        <th>Modern Hebrew Pronunciation</th>
+                        <th>Pronunciation without Dagesh</th>
+                        <th>Final form</th>
+                    </tr>
+                    <tr>
+                        <th>Alef</th>
+                        <th>א</th>
+                        <th>Silent</th>
+                    </tr>
+                    <tr>
+                        <th>Bet</th>
+                        <th>בּ‎</th>
+                        <th>[b]</th>
+                        <th>[v]</th>
+
+                    </tr>
+
+                    <tr>
+                        <th>Vet</th>
+                        <th>ב</th>
+                        <th>[v]</th>
+                    </tr>
+                    <tr>
+                        <th>Gimel</th>
+                        <th>ג</th>
+                        <th>[g]</th>
+                    </tr>
+                    <tr>
+                        <th>Dalet</th>
+                        <th>ד</th>
+                        <th>[d]</th>
+                    </tr>
+                    <tr>
+                        <th>He</th>
+                        <th>ה</th>
+                        <th>[h]</th>
+                    </tr>
+                    <tr>
+                        <th>Vav</th>
+                        <th>ו</th>
+                        <th>[v]</th>
+                    </tr>
+                    <tr>
+                        <th>Zayin</th>
+                        <th>ז</th>
+                        <th>[z]</th>
+                    </tr>
+                    <tr>
+                        <th>Chet</th>
+                        <th>ח</th>
+                        <th>Kh</th>
+                    </tr>
+                    <tr>
+                        <th>Tet</th>
+                        <th>ט</th>
+                        <th>[t]</th>
+                    </tr>
+                    <tr>
+                        <th>Yud</th>
+                        <th>י</th>
+                        <th>[i]</th>
+                    </tr>
+                    <tr>
+                        <th>Kaf</th>>
+                        <th>כ</th>
+                        <th>[kh]</th>
+                        <th>[ch] as in <i>loch</i></th>
+                        <th>ך</th>
+                    </tr>
+                    <tr>
+                        <th>Lamed</th>
+                        <th>ל‎</th>
+                        <th>[l]</th>
+                    </tr>
+                    <tr>
+                        <th>Mem</th>>
+                        <th>מ‎</th>
+                        <th>[m]</th>
+                        <th></th>
+                        <th>ם</th>
+                    </tr>
+                    <tr>
+                        <th>Nun</th>
+                        <th>נ</th>
+                        <th>[n]</th>
+                        <th></th>
+                        <th>ן‎</th>
+
+                    </tr>
+                    <tr>
+                        <th>Samekh</th>
+                        <th>ס</th>
+                        <th>[s]</th>
+                    </tr>
+                    <tr>
+                        <th>Ayin</th>
+                        <th>ע</th>
+                        <th>Silent</th>
+                    </tr>
+                    <tr>
+                        <th>Pe</th>
+                        <th>פ‎</th>
+                        <th>[p]</th>
+                        <th>[f]</th>
+                        <th>ף</th>
+                    </tr>
+                    <tr>
+                        <th>Tzadi</th>
+                        <th>צ</th>
+                        <th>[ts]</th>
+                        <th>-</th>
+                        <th></th>
+
+                    </tr>
+
+
+
+
+
+
+
+
+                </table>
+
+
+
+
+
+            </div>
 
 
         </div>
