Finish hebrew alphabet table and add more paragraphs on the alphabet page

--- a/alphabet.html
+++ b/alphabet.html
@@ -58,7 +58,6 @@
             <br>
             <br>
 
-
             <p>
                 The Hebrew Alphabet, also considered the holy language of the Hebrew Bile in Judaism, has been
                 used throughout the past two-three millennia mainly as script for Biblical Hebrew, modern
@@ -97,9 +96,22 @@
                 In Modern Hebrew, five letters have final forms or <i>sofit</i> (Hebrew: סופית‎). These are only used at
                 the end of a word. This final form does not affect the way these letters are pronounced.
             </p>
+            <p>The letter Shin is pronounced differently depending on where the dot or accent is placed. If the dot is
+                on the upper right side שׁ‎, we pronounce it [sh] as in shadow. If the dot is on the upper left side of
+                the letter, we pronounce it [s] as in salad.</p>
+            <p>
+                Hebrew Language like other Semitic languages has guttural sounds, these are pronounced near the back of
+                the throat. There are 5 consonants that are considered guttural letters in Hebrew: Resh, Ayin, Chet,
+                Hey, Aleph. There are a lot of differences in the way Israelis and other non-native speakers pronounce
+                these letters, for Jewish people coming from European countries, the guttural aspect of the letters is
+                mostly lost, except for Chet. Arab Israelis and Jewish people that are originally from Arabic speaking
+                countries are able to pronounce the Guttural letters more accurately.
+            </p>
 
             <div id="hebrew-alphabet-table">
                 <table>
+                    <caption>Hebrew Letters</caption>
+
                     <tr>
                         <th>Letter Name</th>
                         <th>Form</th>
@@ -107,114 +119,172 @@
                         <th>Pronunciation without Dagesh</th>
                         <th>Final form</th>
                     </tr>
+
                     <tr>
-                        <th>Alef</th>
-                        <th>א</th>
-                        <th>Silent</th>
+                        <td>Alef</td>
+                        <td>א</td>
+                        <td>Silent</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Bet</th>
-                        <th>בּ‎</th>
-                        <th>[b]</th>
-                        <th>[v]</th>
+                        <td>Bet</td>
+                        <td>בּ‎</td>
+                        <td>[b]</td>
+                        <td>[v]</td>
+                        <td>-</td>
 
                     </tr>
 
                     <tr>
-                        <th>Vet</th>
-                        <th>ב</th>
-                        <th>[v]</th>
+                        <td>Vet</td>
+                        <td>ב</td>
+                        <td>[v]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Gimel</th>
-                        <th>ג</th>
-                        <th>[g]</th>
+                        <td>Gimel</td>
+                        <td>ג</td>
+                        <td>[g]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Dalet</th>
-                        <th>ד</th>
-                        <th>[d]</th>
+                        <td>Dalet</td>
+                        <td>ד</td>
+                        <td>[d]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>He</th>
-                        <th>ה</th>
-                        <th>[h]</th>
+                        <td>Hey</td>
+                        <td>ה</td>
+                        <td>[h]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Vav</th>
-                        <th>ו</th>
-                        <th>[v]</th>
+                        <td>Vav</td>
+                        <td>ו</td>
+                        <td>[v]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Zayin</th>
-                        <th>ז</th>
-                        <th>[z]</th>
+                        <td>Zayin</td>
+                        <td>ז</td>
+                        <td>[z]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Chet</th>
-                        <th>ח</th>
-                        <th>Kh</th>
+                        <td>Chet</td>
+                        <td>ח</td>
+                        <td>Kh</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Tet</th>
-                        <th>ט</th>
-                        <th>[t]</th>
+                        <td>Tet</td>
+                        <td>ט</td>
+                        <td>[t]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Yud</th>
-                        <th>י</th>
-                        <th>[i]</th>
+                        <td>Yud</td>
+                        <td>י</td>
+                        <td>[i]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Kaf</th>>
-                        <th>כ</th>
-                        <th>[kh]</th>
-                        <th>[ch] as in <i>loch</i></th>
-                        <th>ך</th>
+                        <td>Kaf</td>>
+                        <td>כ</td>
+                        <td>[kh]</td>
+                        <td>[ch] as in <i>loch</i></td>
+                        <td>ך</td>
                     </tr>
                     <tr>
-                        <th>Lamed</th>
-                        <th>ל‎</th>
-                        <th>[l]</th>
+                        <td>Lamed</td>
+                        <td>ל‎</td>
+                        <td>[l]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Mem</th>>
-                        <th>מ‎</th>
-                        <th>[m]</th>
-                        <th></th>
-                        <th>ם</th>
+                        <td>Mem</td>>
+                        <td>מ‎</td>
+                        <td>[m]</td>
+                        <td>-</td>
+                        <td>ם</td>
                     </tr>
                     <tr>
-                        <th>Nun</th>
-                        <th>נ</th>
-                        <th>[n]</th>
-                        <th></th>
-                        <th>ן‎</th>
+                        <td>Nun</td>
+                        <td>נ</td>
+                        <td>[n]</td>
+                        <td>-</td>
+                        <td>ן‎</td>
 
                     </tr>
                     <tr>
-                        <th>Samekh</th>
-                        <th>ס</th>
-                        <th>[s]</th>
+                        <td>Samekh</td>
+                        <td>ס</td>
+                        <td>[s]</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Ayin</th>
-                        <th>ע</th>
-                        <th>Silent</th>
+                        <td>Ayin</td>
+                        <td>ע</td>
+                        <td>Silent</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
-                        <th>Pe</th>
-                        <th>פ‎</th>
-                        <th>[p]</th>
-                        <th>[f]</th>
-                        <th>ף</th>
+                        <td>Pe</td>
+                        <td>פ‎</td>
+                        <td>[p]</td>
+                        <td>[f]</td>
+                        <td>ף</td>
+
                     </tr>
                     <tr>
-                        <th>Tzadi</th>
-                        <th>צ</th>
-                        <th>[ts]</th>
-                        <th>-</th>
-                        <th></th>
+                        <td>Tzadi</td>
+                        <td>צ‎</td>
+                        <td>[ts]</td>
+                        <td>-</td>
+                        <td>ץ‎</td>
+
+                    </tr>
+                    <tr>
+                        <td>Qof</td>
+                        <td>ק</td>
+                        <td>[K]</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Resh</td>
+                        <td>ר‎</td>
+                        <td>[r]</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Shin</td>
+                        <td>שׁ‎/שׂ‎</td>
+                        <td>[sh]/[s]</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Tav</td>
+                        <td>ת‎</td>
+                        <td>[t]</td>
+                        <td>-</td>
+                        <td>-</td>
 
                     </tr>
 
