Add final content to alphabet page. Create new words page and start adding content there as well.

--- a/alphabet.html
+++ b/alphabet.html
@@ -28,7 +28,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Common Hebrew Phrases</a>
+                        <a href="words.html">Common Hebrew Phrases</a>
                     </li>
                 </ul>
             </nav>
@@ -62,7 +62,8 @@
                 The Hebrew Alphabet, also considered the holy language of the Hebrew Bile in Judaism, has been
                 used throughout the past two-three millennia mainly as script for Biblical Hebrew, modern
                 Hebrew, Jewish Aramaic, Yiddish, and Ladino, and also some Judean-Arabic and Judean-Persian
-                dialects. </p>
+                dialects.
+            </p>
 
             <p>
                 Hebrew is an Abjad script, meaning a type of writing system where each symbol or letter stands
@@ -78,39 +79,70 @@
                 script" or "square script", is a stylized form of the Aramaic alphabet and was technically known by
                 Jewish sages as Ashurit (lit. "Assyrian script") since its origins were alleged to be from Assyria.
             </p>
+
             <h2>The Hebrew Letters</h2>
+
             <p>
                 The Hebrew Alphabet consists of 22 letters, all consonants, it does not have case – there’s no
                 distinction between uppercase and lowercase letters. Hebrew is written from right to left. Five letters
                 have different forms when used at the end of a word.
             </p>
+
             <p>Aleph is the first letter of the alphabet, in Hebrew, the alphabet is called <i>Aleph-Bet</i>
                 (אָלֶפְבֵּית).
             </p>
+
+            <h3>Dagesh</h3>
             <p>
+
                 In modern Hebrew, the dagesh (lit. emphasis) is an accent placed in the middle of a letter that changes
                 the pronunciation of ב‎ bet, כ‎ kaf, and פ‎ pe into [v], [ch] and [f]. We've added a column for
-                pronunciation without dagesh so it's easy to see the difference.
+                pronunciation without dagesh so it's easy to see the difference between the sounds.
             </p>
+
+            <h3>Final Letters</h3>
             <p>
+
                 In Modern Hebrew, five letters have final forms or <i>sofit</i> (Hebrew: סופית‎). These are only used at
                 the end of a word. This final form does not affect the way these letters are pronounced.
             </p>
+
             <p>The letter Shin is pronounced differently depending on where the dot or accent is placed. If the dot is
                 on the upper right side שׁ‎, we pronounce it [sh] as in shadow. If the dot is on the upper left side of
-                the letter, we pronounce it [s] as in salad.</p>
-            <p>
-                Hebrew Language like other Semitic languages has guttural sounds, these are pronounced near the back of
-                the throat. There are 5 consonants that are considered guttural letters in Hebrew: Resh, Ayin, Chet,
-                Hey, Aleph. There are a lot of differences in the way Israelis and other non-native speakers pronounce
-                these letters, for Jewish people coming from European countries, the guttural aspect of the letters is
-                mostly lost, except for Chet. Arab Israelis and Jewish people that are originally from Arabic speaking
-                countries are able to pronounce the Guttural letters more accurately.
+                the letter, we pronounce it [s] as in salad.
             </p>
 
-            <div id="hebrew-alphabet-table">
+            <h3>Gutturals</h3>
+            <p>
+                Hebrew Language like other Semitic languages has guttural sounds, these are pronounced near the back of
+                the throat. There are 5 consonants that are considered guttural letters in Hebrew:
+                <ul>
+                    <li>Resh ר‎ - is pronounced as rolled [r] similar to the French word <i>restaurant</i>. </li>
+                    <li>Ayin ע - pronounced as if you're clearing your throat.</li>
+                    <li>Chet ח is pronounced as [ch] for example Bach. </li>
+                    <li>Hey ה - is a very soft [h].</li>
+                    <li>Aleph א - also called a glottal stop, is type of consonantal sound that is produced by
+                        obstructing airflow in the vocal tract, hence Aleph has no sound, it’s like a pause.</li>
+                </ul>
+            </p>
+
+            <h3>Pronunciation</h3>
+            <p>
+                There are a lot of differences in pronunciation in modern Hebrew among native and non-native speakers.
+                For example, Ashkenazi Jews, Jewish people who have European
+                ancestry, don't pronounce most of the guttural letters. Arab Israelis and Jewish people that are
+                originally from Arabic speaking countries - mainly Sephardi and Mizrahi Jews - are able to pronounce the
+                guttural letters more
+                accurately. When learning Hebrew, it's best not to focus too much on pronunciation of guttural letters
+                or other types of letters since non-natives usually cannot correctly pronounce these more specific
+                sounds. Unless you
+                speak a Semitic language or a language that has similar sounds, our advice is to not trouble yourself
+                too much with the exact pronunciation and just enjoy the learning process!
+            </p>
+
+            <div id="alphabet-table">
+
                 <table>
-                    <caption>Hebrew Letters</caption>
 
                     <tr>
                         <th>Letter Name</th>
@@ -121,7 +153,7 @@
                     </tr>
 
                     <tr>
-                        <td>Alef</td>
+                        <td>Aleph</td>
                         <td>א</td>
                         <td>Silent</td>
                         <td>-</td>
@@ -289,20 +321,64 @@
                     </tr>
 
 
-
-
-
-
-
-
                 </table>
-
-
-
 
 
             </div>
 
+            <br>
+
+            <h3>Listening and speaking practice</h3>
+            <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
+                learn
+                them. So a Hebrew lesson wouldn't be complete without pronunciation practice, click on <a
+                    href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts" target="_blank">this
+                    YouTube link</a> to hear how the Hebrew letters sound like and give it a go as well!!
+            </p>
+
+            <h3>Vowels</h3>
+            <p>
+                Hebrew language has a system of dots and diacritics that helps readers determine where vowels
+                are and how to pronounce words - this is called <i>niqqud</i>. This was developped historically by the
+                Masoretes
+                (Jewish scribes and scholars) between the 5th and the 10th centuries. This was initially meant
+                to
+                standardize
+                pronunciation, paragraph, verse division and cantillation or chanting of the Hebrew Bible (the
+                Tanakh).
+                In writing, these are only used to teach children or beginners Hebrew, in religious texts such
+                as prayer books or the Hebrew Bible and in borrowed words.
+
+            </p>
+
+            <p class="vowels">
+                <img src="assets/images/hebrew_vowels.gif"
+                    alt="this is an image showing all Hebrew vowels and their pronunciation">
+            </p>
+            <p>
+                Now you can watch <a
+                    href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
+                    target="_blank">this
+                    video</a> to get a sense of how to best pronounce the wowels.
+            </p>
+
+            <h3><i>Mater Lectionis</i> (from Latin "mothers of reading")</h3>
+            <p>
+                There are 4 weak consonants that act as vowels in Hebrew, these are Aleph, Hey, Vav and Yud.
+                They are
+                used in combination with diacritics or voewls - usually Aleph and Ayin are mute and only
+                indicate that the letter should be pronounced as a vowel.
+            </p>
+
+            <h3>Gematria</h3>
+            <p>
+                Hebrew letters have numerical values. Similar to Roman numerals, letters are added together to equal a
+                given number, and the letters retain their essential worth no matter where they are placed in a
+                sequence, so tav, kaf, and aleph, for example, equal 421. This system is called Gematria in Judaism.
+                In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of the
+                week or dates in the Hebrew calendar.
+            </p>
+            
 
         </div>
 
