--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
                     </li>
 
                     <li>
-                        <a href="#">Common Hebrew Phrases</a>
+                        <a href="words.html">Common Hebrew Phrases</a>
                     </li>
                 </ul>
             </nav>
-
-
 
 
     </header>
@@ -92,6 +90,14 @@
                 Hakodesh (לשון הקודש), "the holy language" or "the language of holiness” since ancient times. Many
                 ultra-orthodox will only use it for prayer and liturgy.
 
+            </p>
+
+            <p>
+                According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
+                    target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
+                language,
+                while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
+                Russian, Arabic, French, English, Yiddish and Ladino. 
             </p>
 
 
