Add image to words page and adjust link styling on Home page

--- a/alphabet.html
+++ b/alphabet.html
@@ -49,9 +49,8 @@
             <br>
 
             <div id="hebrew-alphabet-introduction">
-                <img id="manuscript-picture" src="assets/images/bereshit_1.jpg"
-                    alt="image of an illuminated Hebrew manuscript with red and blue being the dominant colours which contains the first passage from the Hebrew Bible in Hebrew language">
-
+                <img id="manuscript-picture" src="assets/images/bereshit_1.jpg" alt="image of an illuminated Hebrew manuscript with red and blue being the 
+                    dominant colours which contains the first passage from the Hebrew Bible in Hebrew language">
 
             </div>
 
@@ -378,7 +377,7 @@
                 In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of the
                 week or dates in the Hebrew calendar.
             </p>
-            
+
 
         </div>
 
