--- a/words.html
+++ b/words.html
@@ -39,30 +39,37 @@
     </header>
 
     <h1>Common Hebrew Phrases</h1>
-    <h2> Shalom (שָׁלוֹם)</h2>
-    <p>
-        Shalom is the most well known Hebrew word. It means Hello, goodbye, and peace.
-        It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon you') which is
-        a traditional song sung by Jews every Friday night upon returning home from synagogue prayer on the eve of the
-        Shabbat.
-
-    </p>
-
-    <h2><i>Ken</i> and <i>Lo</i></h2>
-    <p>
-        <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which literally
-        means Yes and No where <i>ve</i> means and.
-    </p>
-    <h2><i>Slicha</i></h2>
-    <p><i>Slicha</i> means sorry or excuse me.</p>
-
-    <h2><i>Toda</i></h2>
-    <p>
-        <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i>meaning thank you very much.
-    </p>
-    <h2><i>BeVakasha</i></h2>
-    <p>
-        Saying <i>BeVakasha</i> is a common and polite way to respond to someone thanking you. When someone says
-        <i>Toda</i> or <i>Toda raba</i>, you can simply reply with BeVakasha. It also means please.
-    </p>
     
+    <div id="words-introduction">
+        <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg"
+            alt="image from an old manuscript of the word Shalom which means Peace in Hebrew" 
+    </div>
+
+        <h2> <i>Shalom</i> (שָׁלוֹם)</h2>
+        <p>
+            Shalom is perhaps the most well known Hebrew word. It means hello, goodbye, and peace.
+            It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon you') which
+            is also
+            a traditional song sung by Jews every Friday night upon returning home from synagogue prayer on the eve of
+            the
+            Shabbat.
+        </p>
+
+        <h2><i>Ken</i> and <i>Lo</i></h2>
+        <p>
+            <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which literally
+            means Yes and No where <i>ve</i> means "and".
+        </p>
+
+        <h2><i>Slicha</i></h2>
+        <p><i>Slicha</i> means sorry or excuse me.</p>
+
+        <h2><i>Toda</i></h2>
+        <p>
+            <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i>meaning thank you very much.
+        </p>
+        <h2><i>BeVakasha</i></h2>
+        <p>
+            Saying <i>BeVakasha</i> is a common and polite way to respond to someone thanking you. When someone says
+            <i>Toda</i> or <i>Toda raba</i>, you can simply reply with BeVakasha. It also means please.
+        </p>
