Add footer content, including links  and styling

--- a/alphabet.html
+++ b/alphabet.html
@@ -101,7 +101,6 @@
 
             <h3>Final Letters</h3>
             <p>
-
                 In Modern Hebrew, five letters have final forms or <i>sofit</i> (Hebrew: סופית‎). These are only used at
                 the end of a word. This final form does not affect the way these letters are pronounced.
             </p>
@@ -391,9 +390,10 @@
 
     <br>
     <br>
-    <br <footer>
-    <p>© 2021 Cristina Onea</p>
+    <br 
 
+    <footer class="main-footer">
+        <p>© 2021 Cristina Onea</p>
     </footer>
 
 
