--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 
     <section>
 
-        <div id="main-image">
-            <img src="assets/images/ashkenazi-haggadah-facsimile-edition-20_2.jpg"
+        <div id="div-home-image">
+            <img id="home-image" src="assets/images/dead-sea-scrolls-facsimile-edition-02.jpg"
                 alt="An image of a dead sea manuscript in Hebrew language">
-
 
         </div>
 
@@ -54,15 +53,13 @@
             <h2>Introduction to the Hebrew Language</h2>
             <br>
             <p>
-                Hebrew (עִבְרִית‎) is a Northwest Semitic language (or Northern Central), belonging to the
+                Hebrew (עִבְרִית‎) is a Northwest Semitic language (or Northern Central), that belongs to the
                 Afroasiatic language family. Historically, it is regarded as the language of the Israelites, Judeans
                 and their ancestors. It is the only Canaanite language still spoken and the only truly successful
                 example of a revived dead language, and one of only two Northwest Semitic languages still spoken,
                 the other being Aramaic.
             </p>
-            <div id="top-image">
 
-            </div>
             <p>
                 Hebrew ceased to be an everyday spoken language sometime between 200 and 400 CE, declining in the
                 aftermath of the Bar Kokhba revolt. Aramaic and, to a lesser extent, Greek were already in use as
@@ -79,16 +76,23 @@
 
             <p>
                 Modern Hebrew is the official language of the State of Israel, while premodern or Biblical Hebrew
-                (in Hebrew Ivrit Tanakhit) is used for prayer or study in Jewish communities around the world today.
+                (in Hebrew <i>Ivrit Tanakhit</i>) is used for prayer or study in Jewish communities around the world
+                today.
                 The Samaritan dialect is also the liturgical tongue of the Samaritans, while modern Hebrew or Arabic
-                is their vernacular. As a foreign language, it is studied mostly by Jews and students of Judaism and
-                Israel, by archaeologists and linguists specializing in the Middle East and its civilizations, and
-                by theologians in Christian seminaries.
-                Nearly all of the Hebrew Bible (in Judaism the Tanakh) is written in Biblical Hebrew, with much of
+                is their vernacular. As a foreign language, Hebrew is one of the most studied languages in the world,
+                mostly by Jews and people with Jewish ancestry,
+                students of Judaism and
+                Israel, by archaeologists (specifically the ones who research the Biblical period) and linguists
+                specializing in the Middle East and its civilizations,
+                by theologians and students in Christian seminaries.
+                Nearly all of the Hebrew Bible (in Judaism the <i>Tanakh</i>) is written in Biblical Hebrew, with much
+                of
                 its present form in the dialect that scholars believe flourished around the 6th century BCE, around
-                the time of the Babylonian captivity. For this reason, Hebrew has been referred to by Jews as Lashon
-                Hakodesh (לשון הקודש), "the holy language" or "the language of holiness” since ancient times. Many
-                ultra-orthodox will only use it for prayer and liturgy.
+                the time of the Babylonian captivity. For this reason, since ancient times, Hebrew has been referred to
+                by Jews as <i>Lashon
+                    Hakodesh</i> (לשון הקודש), "the holy language" or "the language of holiness”.
+                Many ultra-orthodox will only use it for prayer and liturgy, while using Yiddish, Ladino and other
+                languages and dialects for day to day communication.
 
             </p>
 
@@ -97,12 +101,8 @@
                     target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
-                Russian, Arabic, French, English, Yiddish and Ladino. 
+                Russian, Arabic, French, English, Yiddish and Ladino.
             </p>
-
-
-
-
 
 
 
@@ -112,16 +112,23 @@
 
     </section>
 
-    <section>
-        Modern Hebrew
-    </section>
+  
+    <footer class="main-footer">
+        <ul>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+            </li>
+        </ul>
 
-    <section>
-        Interesting Facts
-    </section>
 
-    <footer>
-        <p>© 2021 Cristina Onea</p>
+        <p class="copyright"> © 2021 Cristina Onea</p>
+
     </footer>
 
 
