--- a/words.html
+++ b/words.html
@@ -73,3 +73,10 @@
             Saying <i>BeVakasha</i> is a common and polite way to respond to someone thanking you. When someone says
             <i>Toda</i> or <i>Toda raba</i>, you can simply reply with BeVakasha. It also means please.
         </p>
+
+
+        <footer class="main-footer">
+            <p>© 2021 Cristina Onea</p>
+        </footer>
+
+</body>
